[package]
name = "lsm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
futures = "0.3.26"
rust-crypto = "0.2.36"
# monoio = "0.1.7"
monoio = { path = "../monoio/monoio" }
monoio-compat = "0.1.2"
tokio = { version = "1.30.0", features = ["net"] }

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[profile.dev]
opt-level = 2

# [[bench]]
# name = "kvs"
# harness = false
# opt-level = 2
