[package]
name = "lsm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.4.3"
futures = "0.3.26"
glommio = "0.8.0"
rust-crypto = "0.2.36"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[profile.dev]
opt-level = 2

# [[bench]]
# name = "kvs"
# harness = false
# opt-level = 2
