[package]
name = "lsm-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.5.0"
futures = "0.3.31"
rust-crypto = "0.2.36"
# monoio = "0.2.4"
monoio = { path = "../monoio/monoio", features = ["zero-copy"]}
io-uring = { version = "0.6"}
monoio-compat = "0.1.2"
async-trait = "^0.1.81"
tokio = { version = "1.37.0", features = ["net"] }
structopt = "0.3.26"
async-channel = "2.3.1"
crc16-xmodem-fast = "0.4.0"

[dev-dependencies]
criterion = "0.4.0"
rand = "0.8.5"

[profile.dev]
opt-level = 2

# [[bench]]
# name = "kvs"
# harness = false
# opt-level = 2
